array.island.Island.scala.error
Erreur de compilation :
Island:9: error: type mismatch;
 found   : Array[Int]
 required: Int
  return num
         ^