array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compteur=0
  
  for (i<-1 to num.length){
    if ((num(i) < num(i+1)) && (num(i)!=0)) {
    compteur=compteur + 1 }
  }
  return num
}